# FluentUI

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakeUserPresets.json  README.md  README_zh_CN.md  build&pack.bat  clean.bat  format.bat  format.sh  lrelease.bat  lupdate.bat  package.bat
Controls/: CMakeLists.txt  ControlsQss.qrc  FluAction.cpp  FluAction.h  FluAmPmView.cpp  FluAmPmView.h  FluAppBarButton.cpp  FluAppBarButton.h  FluAppBarToggleButton.cpp  FluAppBarToggleButton.h  FluAutoSuggestBox.cpp  FluAutoSuggestBox.h  FluBorder.cpp  FluBorder.h  FluBusyProgressRing.cpp  FluBusyProgressRing.h  FluCalendarDatePicker.cpp  FluCalendarDatePicker.h  FluCalendarDef.h  FluCalendarSelectDayView.cpp  FluCalendarSelectDayView.h  FluCalendarSelectMonthView.cpp  FluCalendarSelectMonthView.h  FluCalendarSelectYearView.cpp  FluCalendarSelectYearView.h  FluCalendarView.cpp  FluCalendarView.h  FluCalendarViewTitle.cpp  FluCalendarViewTitle.h  FluCheckBox.cpp  FluCheckBox.h  FluCircleDot.cpp  FluCircleDot.h  FluCodeBox.cpp  FluCodeBox.h  FluCodeSyntaxHighlighter.cpp  FluCodeSyntaxHighlighter.h  FluColorButton.cpp  FluColorButton.h  FluColorFlyout.cpp  (+294 more)
Examples/: CMakeLists.txt  FluADSDemo.cpp  FluADSDemo.h  FluAllGlobalColorDemo.h  FluAnimationDemo.cpp  FluAnimationDemo.h  FluBusyProgressRingDemo.h  FluButtonDemo.cpp  FluButtonDemo.h  FluCalendarDatePickerDemo.h  FluCalendarViewDemo.h  FluChangeBgDemo.cpp  FluChangeBgDemo.h  FluCheckBoxDemo.h  FluColorDemo.h  FluColorViewDemo.cpp  FluColorViewDemo.h  FluComboBoxDemo.cpp  FluComboBoxDemo.h  FluCommandBarDemo.cpp  FluCommandBarDemo.h  FluDialogDemo.cpp  FluDialogDemo.h  FluDisplay16.h  FluDisplayBoxDemo.h  FluDisplayCodeDemo.h  FluDisplayIconBoxDemo.h  FluDockDemo.h  FluDropDownButtonDemo.h  FluExamplesQss.qrc  FluExpandDemo.h  FluFlipViewDemo.cpp  FluFlipViewDemo.h  FluFlowLayoutDemo.cpp  FluFlowLayoutDemo.h  FluFlyoutDemo.h  FluFrameLessDemo.cpp  FluFrameLessDemo.h  FluGifBoxDemo.cpp  FluGifBoxDemo.h  (+71 more)
FluControls/: CMakeLists.txt  FluAction.h  FluAmPmView.cpp  FluAppBarButton.cpp  FluAppBarToggleButton.cpp  FluAutoSuggestBox.cpp  FluBorder.cpp  FluBusyProgressRing.cpp  FluCalendarDatePicker.cpp  FluCalendarSelectDayView.cpp  FluCalendarSelectDayView.h  FluCalendarSelectMonthView.cpp  FluCalendarSelectYearView.cpp  FluCalendarView.cpp  FluCalendarViewTitle.cpp  FluCheckBox.cpp  FluCircleDot.cpp  FluCodeBox.cpp  FluCodeBox.h  FluColorButton.cpp  FluColorFlyout.cpp  FluColorLabel.h  FluColorPickerButton.h  FluColorView.h  FluColorViewGradient.cpp  FluComboBox.cpp  FluComboBoxEx.cpp  FluComboBoxEx.h  FluComboBoxTextItem.cpp  FluCommandBar.h  FluCommandBarIconItem.cpp  FluCommandBarIconItem.h  FluCommandBarIconTextItem.cpp  FluCommandBarIconTextItem.h  FluCommandBarItem.h  FluCommandBarItemType.h  FluCommandBarSplitItem.h  FluConfirmFlyout.cpp  FluControls.vcxproj  FluControls.vcxproj.filters  (+154 more)
FluExamples/: CMakeLists.txt  FluADSDemo.cpp  FluADSDemo.h  FluAllGlobalColorDemo.cpp  FluAllGlobalColorDemo.h  FluAnimationDemo.cpp  FluAnimationDemo.h  FluColorViewDemo.cpp  FluCommandBarDemo.cpp  FluCommandBarDemo.h  FluDialogDemo.cpp  FluDialogDemo.h  FluDockDemo.cpp  FluDockDemo.h  FluExamples.vcxproj  FluExamples.vcxproj.filters  FluFlipViewDemo.cpp  FluFrameLessDemo.cpp  FluFrameLessDemo.h  FluGifBoxDemo.cpp  FluGifBoxDemo.h  FluHNavigationViewDemo.cpp  FluHNavigationViewDemo.h  FluInfoBadgeDemo.cpp  FluLineSeriesDemo.cpp  FluLineSeriesDemo.h  FluMSWindowDemo.cpp  FluMSWindowDemo.h  FluMVDemo.cpp  FluMVDemo.h  FluMainWidgetDemo.cpp  FluMainWidgetDemo.h  FluMenuBarDemo.cpp  FluMenuBarDemo.h  FluMenuDemo.cpp  FluPaginationDemo.cpp  FluPaginationDemo.h  FluPieSeriesDemo.cpp  FluPieSeriesDemo.h  FluQrCodeDemo.cpp  (+24 more)
FluIconTool/: FluIconTool.vcxproj  FluIconToolWidget.h
FluUtils/: CMakeLists.txt  FluConfigUtils.cpp  FluConfigUtils.h  FluEmoijUtils.cpp  FluEmoijUtils.h  FluIconUtils.cpp  FluStyleSheetUitls.cpp  FluStyleSheetUitls.h  FluThemeUtils.cpp  FluThemeUtils.h  FluUtils.vcxproj  FluUtils.vcxproj.filters
FluWinGallery/: CMakeLists.txt  FluAEmptyPage.cpp  FluATitlePage.cpp  FluAllSamplesPage.cpp  FluAppBarButtonPage.cpp  FluAppBarToggleButtonPage.cpp  FluAutoSuggestBoxPage.cpp  FluBasicInputPage.cpp  FluBorderPage.cpp  FluButtonPage.cpp  FluCalendarDatePickerPage.cpp  FluCalendarViewPage.cpp  FluCheckBoxPage.cpp  FluCollectionsPage.cpp  FluColorPickerPage.cpp  FluColorPickerPage.h  FluComboBoxPage.cpp  FluContentDialogPage.cpp  FluDateAndTimePage.cpp  FluDatePickerPage.cpp  FluDialogsAndFlyoutsPage.cpp  FluDropDownButtonPage.cpp  FluEmoijsPage.cpp  FluEmoijsPage.h  FluExpanderPage.cpp  FluFlipViewPage.cpp  FluFlyoutPage.cpp  FluGalleryWindow.cpp  FluGalleryWindow.h  FluHomePage.cpp  FluHomePageTitle.cpp  FluHomePageTitle.h  FluHyperLinkButtonPage.cpp  FluIconsPage.cpp  FluIconsPage.h  FluInfoBadgePage.cpp  FluInfoBarPage.cpp  FluLayoutPage.cpp  FluListViewPage.cpp  FluMediaPage.cpp  (+36 more)
Gallery/: CMakeLists.txt  FluAEmptyPage.cpp  FluAEmptyPage.h  FluATitlePage.cpp  (+119 more)
(+592 files in other folders)
